<resources>
    <string name="app_name">MindshopUI</string>
    <string name="title_home">Home</string>
    <string name="title_Products">Products</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="signINBTN">SIGN IN</string>
    <string name="actionMenu">SIGN UP</string>
    <string name="signuserNameText">Name</string>
    <string name="signuserEmailText">Email</string>
    <string name="signuserpwText">Password</string>
    <string name="signuserFpwText">Forgot password?</string>
    <string name="signToptext">Sign In</string>
    <string name="signbottomtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Integer maximus accumsan erat id facilisis.</string>
    <string name="signlowertext">Or Sign in with social media</string>
    <string name="imgNotFound">imgNotFound</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="title">TITLE 1</string>
    <string name="TODO">TODO</string>
    <string name="emailOfUser">Kylie_04@gmail.com</string>
    <string name="userName">Kylie</string>
    <string name="Account">Account</string>
    <string name="OrderModel">My Order</string>
    <string name="settings">Settings</string>
    <string name="searching">Search...</string>
    <string name="pendingOrders">No Pending orders</string>
    <string name="Sales">Sale Discount</string>
    <string name="popular">Popular</string>
    <string name="pending">Pending</string>
    <string name="confirm">CONFIRM</string>
    <string name="continue_shopping">CONTINUE SHOPPING</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addToCart">ADD TO CART</string>
    <string name="checkout">CHECK OUT</string>
    <string name="subtotal">subtotal</string>
    <string name="buy">BUY NOW</string>
    <string name="Total">Total</string>
    <string name="shippingAddress">Shipping Address</string>


</resources>