<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".activities.Sign">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topElement"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/corneredradius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signToptext"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/signbottomtext"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topElement">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            app:cardBackgroundColor="@color/_F6F6F6"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:hint="@string/signuserNameText"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            app:cardBackgroundColor="@color/_F6F6F6"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:hint="@string/signuserEmailText"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            app:cardBackgroundColor="@color/_F6F6F6"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="280dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/eye_crossed"
                    android:hint="@string/signuserpwText"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/forgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:text="@string/signuserFpwText"
            android:textAllCaps="false"
            android:textColor="@color/_E41A4A" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_main"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/black"
            android:text="@string/signINBTN"
            android:textColor="@color/white"
            app:shapeAppearanceOverlay="@style/PillShapeAppearance" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signlowertext"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/_1877F2">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/facebook_icon"
                    android:contentDescription="@string/imgNotFound" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/_F6F6F6"></RelativeLayout>

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/_F6F6F6"></RelativeLayout>

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/_F6F6F6"></RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>