<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.onBoarding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/_F6F6F6"></RelativeLayout>

        <TextView
            android:id="@+id/text_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/signbottomtext"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/bubblesID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/bubble1"
                android:layout_width="20dp"
                android:layout_height="6dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/layout_roundercorner"
                android:backgroundTint="@color/_E41A4A" />

            <RelativeLayout
                android:id="@+id/bubble2"
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/_C4C4C4" />

            <RelativeLayout
                android:id="@+id/bubble3"
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/_C4C4C4" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skip_btn"
            android:onClick="SkipAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:text="@string/skip"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:onClick="NextAction"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/_E41A4A"
            android:paddingHorizontal="30dp"
            android:text="@string/next"
            android:textColor="@color/white"
            app:shapeAppearanceOverlay="@style/PillShapeAppearance" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>