<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <RelativeLayout
        android:id="@+id/topContainer"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/_F6F6F6"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/circle"
                android:backgroundTint="@color/_E41A4A">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/TODO"
                    android:src="@drawable/profile_icon" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView_Sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:gravity="center"
                android:text="@string/userName"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/emailOfUser"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/topContainer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="65dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@color/_F6F6F6"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:elevation="2dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/TODO"
                        android:src="@drawable/profile_iconblack" />

                    <Button
                        android:id="@+id/account_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:onClick="navigateToAccount"
                        android:text="@string/Account"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="10dp"
            android:elevation="2dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/TODO"
                    android:src="@drawable/orders" />

                <Button
                    android:id="@+id/orders_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:onClick="navigateToOrders"
                    android:text="@string/Orders"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:elevation="2dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/TODO"
                    android:src="@drawable/settings_icon" />

                <Button
                    android:id="@+id/setting_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:onClick="navigateToSettings"
                    android:text="@string/settings"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>